Rename cities on airport update (#275)
* Implement postcard generation

* Add country and continent meta to the postcard generation function

* Add country and continent meta to the postcard generation function

* Rename cities on airport update

* Rename cities on airport update

* Rename cities on airport update
