# src/core/domain/events/dto/city.event.ts
@@ -2,6 +2,7 @@ import { DomainEvent } from './event';
 
 export enum CityEventType {
   CityWasCreated = 'city.created',
+  CityWasRenamed = 'city.renamed',
 }
 
 type CityWasCreatedPayload = {
@@ -10,10 +11,26 @@ type CityWasCreatedPayload = {
   country: string;
 };
 
+type CityWasRenamedPayload = {
+  cityId: string;
+  name: string;
+  country: string;
+  previousName: string;
+  previousCountry: string;
+};
+
 export class CityWasCreatedEvent extends DomainEvent {
   public static readonly name = CityEventType.CityWasCreated;
 
   constructor(public readonly payload: CityWasCreatedPayload) {
+    super();
+  }
+}
+
+export class CityWasRenamedEvent extends DomainEvent {
+  public static readonly name = CityEventType.CityWasRenamed;
+
+  constructor(public readonly payload: CityWasRenamedPayload) {
     super();
   }
 }
